data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_557.wast
;; - **Test 8**:    Create a loop with memory access operations but intentionally include conditions that never fail, ensuring the loop continues to iterate indefinitely in scenarios where memory bounds are not an issue.     Constraint: Memory operation-based infinite loop.     Relation: Memory operations causing infinite loop due to always true condition.

(assert_invalid
  (module
    (memory 1)
    (func (export "loop_memory")
      (i32.const 0)
      (loop (result i32)
        (i32.load)
        (br_if 0 (i32.const 1)))
    )
  )
  "infinite loop detected"
)